2002-09-03  Brent Welch <welch@panasas.com>
        * (In the tclhttpd-3-4-rel branch).
        * bin/httpdthread.tcl: Fixed custom code loader to skip pkgIndex.tcl
        files.
        * htdocs/index.html: Fixed a few errors pointed out by Larry Virden
        * htdocs/forms/posttest.tml: Added comments that explain this form.
        * DIST_build/DIST: moved the copying of some things into the htdocs
        tree from the Makefile to the distribution creation script.
        * configure.in:
        * README
        * bin/httpd.tcl:
        * lib/version.tcl: Changed to 3.4.2 (sigh)
        * Added VERSION so I remember how to change the version number in
          all the right places!

2002-08-30  Brent Welch <welch@panasas.com>
        * (In the tclhttpd-3-4-rel branch).
        * Modified Auth_Check, which is used by DocAccessHook, to
        disallow retrieval of .tml, .tclaccess and .htaccess files.
        This vulnerability was identified by David Welton, although
        I'll note you had to had permission to retrieve the access
        control files.
        * lib/url.tcl: Added Url_AccessUnInstall to remove hooks.
        From Petrus Vloet:
        * lib/debug.tcl: Added /debug/enable so you can disable the
        Debug URL.
        * lib/direct.tcl: Added Direct_UrlRemove to support disabling
        the debug url.
        * htdocs/hacks.tml: Updated to explain the /debug URL features

2002-08-29  Brent Welch <welch@panasas.com>
        * (In the tclhttpd-3-4-rel branch).  These were added on
        the suggestion of David Welton
        * lib/auth.tcl: Auth_Check checks that the path is a directory
        before rummaging around for the .tclaccess and .htaccess files
        * lib/url.tcl: Added Url_AccessInstallPrepend to put the
        access hook at the front of the search path.

2002-08-26  Brent Welch <welch@panasas.com>
        * (In the tclhttpd-3-4-rel branch)
        * lib/cgi.tcl: Fixed POST forms on Windows so we correctly set up